have a functional add from display all list, and a quick have list display

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
   <br/>
 
+  <form method="link" action="have_list.php">
+    <input type="submit" value="display have list">
+  </form>
+
+
+
+
+  <br/>
+
   <fieldset>
   <form action="display_selected.php" method="post" onsubmit="all_overide();">
     <legend>display a particular card</legend>
