--- a/index.html
+++ b/index.html
@@ -7,58 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/JavaScript" src="fan_feed_plus.js"></script> 
-    <title>coming soon</title>
+    <title>fan feed +</title>
   </head>
 
 
   <body>
-
-  <fieldset>
-  <form action="display_all.php" method="post">
-    Order by: <select name="order_all" id="order_all">
-      <option value="parallel">Parallel</option>
-      <option value="faction">Faction</option>        
-    </select>   
-    <input type="submit" value="display all cards">
-  </form>
-  </fieldset>
-
-  <br/>
-
-  <form method="link" action="have_list.php">
-    <input type="submit" value="display have list">
-  </form>
-
-  <form method="link" action="want_list.php">
-    <input type="submit" value="display want list">
-  </form>
-
-
-
-  <br/>
-
-  <fieldset>
-  <form action="display_selected.php" method="post" onsubmit="all_overide();">
-    <legend>display a particular card</legend>
-    Parallel: <input type="string" name="parallel" id="parallel" value="All"> <br/>
-    Faction: <input type="string" name="faction" id="faction" value="All"> <br/>
-    In_Set: <input type="string" name="in_set" id="in_set" value="All"> <br/>
-    Name: <input type="string" name="card_name" id="card_name" value="All"> <br/>
-    Color: <input type="string" name="color" id="color" value="All"> <br/>
-    # in Set: <input type="string" name="number_in_set" id="number_in_set" value="All"> <br/>
-    Rarity: <input type="string" name="rarity" id="rarity" value="All"> <br/>
-    Sold Out: <input type="string" name="sold_out" id="sold_out" value="All"> <br/>
-    Series: <input type="string" name="series" id="series" value="All"> <br/>
-    Order by: <select name="order_selected" id="order_selected">
-      <option value="parallel">Parallel</option>
-      <option value="faction">Faction</option>        
-    </select>                   
-    <input type="submit" value="display the cards"/>
-  </form>
-  </fieldset>
-
-  <br/>
-
   <fieldset>
   <form action="sign_up.php" method="post" onsubmit="return validate_signup();">
     <legend>sign up</legend>
@@ -80,69 +33,6 @@
     <input type="submit" />
   </form>
   </fieldset>  
-
-  <br/>
-
-  <fieldset>
-  <form action="add_card.php" method="post" id="add_card" onsubmit="return validate_add_card();">
-    <legend>add card</legend>
-    Parallel: <select name="parallel_add" id="parallel_add" class="has-extra-hidden-children">
-      <option value="Blank"></option>
-      <option value="Insert">insert</option>
-      <option value="Base">base</option>
-      <option value="Award">award</option>
-    </select>
-
-    Faction: <select name="faction_add" id="faction_add">
-      <option value="Blank"></option>
-      <option value="Galactic Empire">galactic empire</option>
-      <option value="Galactic Republic">galactic republic</option>  
-      <option value="Independent">independent</option> 
-      <option value="Rebel Alliance">rebel alliance</option>
-      <option value="Separatists">separatists</option>
-      <option value="Creatures">creatures</option>                           
-    </select>
-
-    <div class="is-extra-hidden-child" style="display:none">    
-      In set: <select name="in_set_add" id="in_set_add">
-        <option value="Blank"></option>
-        <option value="Galactic Moments">galactic moments</option>
-        <option value="Bounty">bounty</option>  
-        <option value="Fans Choice">fan's choice</option> 
-        <option value="Vintage">vintage</option>
-        <option value="Widevision">widevision</option>
-        <option value="Topps Choice">topps' choice</option> 
-        <option value="Other">other</option>                      
-      </select>
-      <input name="other_add" type="text" id="other_add" style="display:none">
-    </div>
-
-
-    Name: <input type="string" name="card_name_add" id="card_name_add"> <br/>
-
-    Color: <input type="string" name="color_add" id="color_add"> <br/> 
-
-    <div class="is-extra-hidden-child" style="display:none">   
-      Number in Set: <input type="number" name="number_in_set_add" id="number_in_set_add"> <br/>
-    </div>
-
-    Rarity: <input type="number" name="rarity_add" id="rarity_add"> <br/>
-
-    Sold Out: <select name="sold_out_add" id="sold_out_add">
-      <option value="Blank"></option>
-      <option value="No">no</option>    
-      <option value="Yes">yes</option> 
-    </select> 
-
-    Series: <select name="series_add" id="series_add">
-      <option value="Blank"></option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-    </select>               
-    <input type="submit" />
-  </form>
-  </fieldset>    
-
 
   </body>
 
