added trading options and verifying.

--- a/main_page.html
+++ b/main_page.html
@@ -13,10 +13,14 @@
 
 
   <body>
-    <a href="add_card.html">ADD CARD</a><br/>
-    <a href="display_cards.html">DISPLAY CARDS</a><br/>
+  
+    <form method="link" action="add_card.html">
+      <input type="submit" value="add card to database">
+    </form>
 
-
+    <form method="link" action="display_cards.html">
+      <input type="submit" value="display cards in database">
+    </form>
 
     <form method="link" action="have_list.php">
       <input type="submit" value="display have list">
