Added a trade finder, and fixed the session start php

--- a/add_card.html
+++ b/add_card.html
@@ -13,7 +13,7 @@
   <body>
 
     <fieldset>
-    <form action="add_card.php" method="post" id="add_card" onsubmit="return validate_add_card();">
+    <form method="post" id="add_card" onsubmit="return validate_add_card();">
       <legend>add card</legend>
       Parallel: <select name="parallel_add" id="parallel_add" class="has-extra-hidden-children">
         <option value="Blank"></option>
