--- a/display_cards.html
+++ b/display_cards.html
@@ -48,7 +48,7 @@
 -->
 
   <fieldset>
-  <form action="display_selected.php" method="post" id="display_selected" onsubmit="return all_override_two();">
+  <form method="post" id="display_selected" onsubmit="return all_override_two();">
     <legend>Display</legend>
     Parallel: <select name="parallel" id="parallel" class="has-extra-hidden-children">
       <option value="%%">All</option>
