--- a/main_page.html
+++ b/main_page.html
@@ -30,5 +30,10 @@
       <input type="submit" value="display want list">
     </form>
 
+    <form method="link" action="trade_finder.php">
+      <input type="submit" value="trade finder">
+    </form>
+
+
     </body>
 </html>
