fixed trader finder and added user pages

--- a/main_page.html
+++ b/main_page.html
@@ -34,6 +34,15 @@
       <input type="submit" value="trade finder">
     </form>
 
+    <fieldset>
+      <form method="post" action="user_page.php">
+        Name: <input type="string" name="user_name" id="user_name" value="type here"><br/>
+        <input type="submit" />
+      </form>
+    </fieldset>
+
+
+
 
     </body>
 </html>
