--- a/main_page.html
+++ b/main_page.html
@@ -34,10 +34,26 @@
       <input type="submit" value="trade finder">
     </form>
 
+    <form method="link" action="display_messages.php">
+      <input type="submit" value="display messages">
+    </form>
+
     <fieldset>
       <form method="post" action="user_page.php">
-        Name: <input type="string" name="user_name" id="user_name" value="type here"><br/>
+        Name: <input type="string" name="user_name" id="user_name" value="look at user page"><br/>
         <input type="submit" />
+      </form>
+    </fieldset>
+
+    <fieldset>
+      <form method="post" action="update_message.php">
+        Update message: </br>
+        <textarea 
+              onKeyDown="textCounter(this,'message_count',150);"
+              onKeyUp="textCounter(this,'message_count',150)" 
+              name="message" id="message" rows="5" cols=""></textarea> </br>
+        <input style="color:red;font-size:12pt;font-style:italic;" readonly="readonly" type="text" id='message_count' name="message_count" size="3" maxlength="3" value="500" /> characters left</i>
+            <input type="submit" />
       </form>
     </fieldset>
 
