small changes and added a few files in prep.

--- a/main_page.html
+++ b/main_page.html
@@ -40,7 +40,7 @@
 
     <fieldset>
       <form method="post" action="user_page.php">
-        Name: <input type="string" name="user_name" id="user_name" value="look at user page"><br/>
+        View user page: <input type="string" name="user_name" id="user_name" value="type here">
         <input type="submit" />
       </form>
     </fieldset>
