--- a/display_cards.html
+++ b/display_cards.html
@@ -1,17 +1,30 @@
+<?php session_start(); ?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="Patt Hickey">      
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script type="text/JavaScript" src="fan_feed_plus.js"></script> 
-    <title>coming soon</title>
+    <meta name="author" content="Patt Hickey">  
+    <title>fan feed +</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
 
 
   <body>
+    <div id="headerfile"></div>
+    <div class="row">
+      <div class="col-md-11 col-md-offset-1">
 
     <fieldset>
     <form action="display_all.php" method="post">
@@ -48,7 +61,7 @@
 -->
 
   <fieldset>
-  <form method="post" id="display_selected" onsubmit="return all_override_two();">
+  <form method="post" id="display_selected" action="display_selected.php" onsubmit="return all_override_two();">
     <legend>Display</legend>
     Parallel: <select name="parallel" id="parallel" class="has-extra-hidden-children">
       <option value="%%">All</option>
@@ -113,10 +126,18 @@
   </form>
   </fieldset>
 
+      </div>
+    </div>
+    <div id="footerfile"></div>
 
-
-
-
-    </body>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/JavaScript" src="fan_feed_plus.js"></script> 
+    <script> 
+      $(function(){
+        $("#headerfile").load("header.html"); 
+        $("#footerfile").load("footer.html"); 
+      });
+    </script>
+  </body>
 </html>
