making it look pretty!

--- a/main_page.html
+++ b/main_page.html
@@ -23,50 +23,11 @@
   <body>
     <div id="headerfile"></div>
     <div class="row">
-    <div class="col-md-11 col-md-offset-1">
+    <div class="col-md-10 col-md-offset-1 container">
   
-    <form method="link" action="add_card.html">
-      <input type="submit" value="add card to database">
-    </form>
-
-    <form method="link" action="display_cards.html">
-      <input type="submit" value="display cards in database">
-    </form>
-
-    <form method="link" action="have_list.php">
-      <input type="submit" value="display have list">
-    </form>
-
-    <form method="link" action="want_list.php">
-      <input type="submit" value="display want list">
-    </form>
-
-    <form method="link" action="trade_finder.php">
-      <input type="submit" value="trade finder">
-    </form>
-
-    <form method="link" action="display_messages.php">
-      <input type="submit" value="display messages">
-    </form>
-
-    <fieldset>
-      <form method="post" action="user_page.php" onsubmit="return validate_user_page()">
-        View user page: <input type="string" name="user_name" id="user_name">
-        <input type="submit" />
-      </form>
-    </fieldset>
-
-    <fieldset>
-      <form method="post" action="update_message.php">
-        Update message: </br>
-        <textarea 
-              onKeyDown="textCounter(this,'message_count',150);"
-              onKeyUp="textCounter(this,'message_count',150)" 
-              name="message" id="message" rows="5" cols=""></textarea> </br>
-        <input style="color:red;font-size:12pt;font-style:italic;" readonly="readonly" type="text" id='message_count' name="message_count" size="3" maxlength="3" value="150" /> characters left</i>
-            <input type="submit" />
-      </form>
-    </fieldset>
+      <div class="jumbotron" id="main-page-jumbo">
+      </br></br></br></br></br>
+      </div>
 
 
     </div>
