Fixing some small things, like sign up and index.

--- a/header.html
+++ b/header.html
@@ -36,7 +36,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-    		<li><a href="main_page.html">HOME</a></li>
+    		<li><a href="/">HOME</a></li>
+        <li><a href="sign_up.html">SIGN UP</a></li>
     		<li><a href="display_cards.html">VIEW CARDS</a></li>
     		<li><a href="trade_finder.php">FIND TRADES</a></li>
         <li><a href="display_messages.php">FEED</a></li>    
