updating the front page.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
       <div class="jumbotron" id="main-page-jumbo">
       </br></br></br></br></br>
       </div>
+      <p>
+        This site is used as a trading tool for the Star Wars Card Trader app. It is designed to help traders find other people who are trading what they want, and want what they are trading. It is still in very early development, but does have functionality. 
+
+        I started this site at the beginning of summer 2015 and it is my first attempt at using javascript and php, with a database. I had to take a break on working it, but plan on bringing it to live after my december semester. 
+
+        End up here and interested in it? email me at <a href="mailto:patthickey@gmail.com">patthickey@gmail.com</a>
+        or visit my site at <a href="patthickey.com">patthickey.com</a>
+
+      </p>
 
 
 
