--- a/footer.html
+++ b/footer.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
     		<li><a href="http://twitter.com/fanfeedplus">TWITTER</a></li>
-    		<li><a href="mailto:contact@fanfeedplus.com">EMAIL</a></li>
+    		<li><a href="mailto:patthickey@gmail.com">EMAIL</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
